--- a/main.html
+++ b/main.html
@@ -7,21 +7,23 @@
     <link rel="stylesheet" href="style.css" />
     <style>
       img {
-        width: 200px;
+        width: 300px;
       }
     </style>
   </head>
   <body>
     <h1 role="heading">My Accessible Portfolio</h1>
 
-    <nav role="navigation">
-      <ul role="list">
+    <nav role="navigation" id="nav">
+      <ul role="list" id="ul-items">
         <li role="listitem"><a href="#">Home</a></li>
         <li role="listitem"><a href="#">Portfolio</a></li>
+        <li role="listitem"><a href="#">Search</a></li>
         <li role="listitem"><a href="#">About</a></li>
         <li role="listitem"><a href="#">Contact</a></li>
       </ul>
     </nav>
+<br>
 
     <img
       src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8cG9ydGZvbGlvc3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60"
